fixing layout issues

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ h1 {
   right: 0;
   position: fixed;
   transform: translateY(-160%);
-  transition: transform 0.2s;
+  transition: transform 0.01s;
   z-index: 1;
 }
 
@@ -378,8 +378,8 @@ Header
     background: none;
     position: absolute;
     top: 4em;
-    transform: translateY(10);
-    transition: none;
+    transform: translateY(0);
+    transition: 0ms;
   }
 
   .menu {
@@ -499,7 +499,6 @@ Main Content
   .photo:hover {
     opacity: 0.8;
     transform: scale(1.1);
-    transition: 0.2s ease;
   }
 
   /* ==========
@@ -545,7 +544,7 @@ Footer
 Header
 ==========*/
   h1 {
-    padding: 1em;
+    padding: 1em 0.5em;
   }
 
   /* ==========
@@ -553,11 +552,5 @@ Gallery
 ==========*/
   .grid {
     grid-template-rows: repeat(8, 160px);
-  }
-
-  .photo:hover {
-    opacity: 0.8;
-    transform: scale(1.1);
-    transition: 0.2s ease;
   }
 }
